--- a/web-start/functions/package.json
+++ b/web-start/functions/package.json
@@ -2,6 +2,8 @@
   "name": "friendlychat-codelab",
   "description": "Firebase SDK for Cloud Functions codelab",
   "dependencies": {
+    "@google-cloud/vision": "^0.12.0",
+    "child-process-promise": "^2.2.1",
     "firebase-admin": "~8.11.0",
     "firebase-functions": "^3.6.1"
   },
